--- a/DatabseSystemsProject/DatabseSystemsProject/DatabseSystemsProject.csproj
+++ b/DatabseSystemsProject/DatabseSystemsProject/DatabseSystemsProject.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="DataLayer.cs" />
     <Compile Include="Entities\NarodniPoslanik.cs" />
+    <Compile Include="Entities\StalnoZaposlen.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +80,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Mappings\NarodniPoslanikMap.cs" />
+    <Compile Include="Mappings\StalnoZaposlenMap.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
