--- a/DatabseSystemsProject/DatabseSystemsProject/DatabseSystemsProject.csproj
+++ b/DatabseSystemsProject/DatabseSystemsProject/DatabseSystemsProject.csproj
@@ -73,6 +73,7 @@
     <Compile Include="DataLayer.cs" />
     <Compile Include="Entities\NarodniPoslanik.cs" />
     <Compile Include="Entities\StalnoZaposlen.cs" />
+    <Compile Include="Entities\Telefon.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +82,7 @@
     </Compile>
     <Compile Include="Mappings\NarodniPoslanikMap.cs" />
     <Compile Include="Mappings\StalnoZaposlenMap.cs" />
+    <Compile Include="Mappings\TelefonMap.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
