--- a/DatabseSystemsProject/DatabseSystemsProject/DatabseSystemsProject.csproj
+++ b/DatabseSystemsProject/DatabseSystemsProject/DatabseSystemsProject.csproj
@@ -73,6 +73,8 @@
     <Compile Include="DataLayer.cs" />
     <Compile Include="Entities\Akt.cs" />
     <Compile Include="Entities\NarodniPoslanik.cs" />
+    <Compile Include="Entities\RadniDan.cs" />
+    <Compile Include="Entities\Sednica.cs" />
     <Compile Include="Entities\SluzbenaProstorija.cs" />
     <Compile Include="Entities\OrganizacionaJedinica.cs" />
     <Compile Include="Entities\StalnoZaposlen.cs" />
@@ -86,6 +88,8 @@
     <Compile Include="Mappings\AktMap.cs" />
     <Compile Include="Mappings\NarodniPoslanikMap.cs" />
     <Compile Include="Mappings\OrganizacionaJedinicaMap.cs" />
+    <Compile Include="Mappings\RadniDanMap.cs" />
+    <Compile Include="Mappings\SednicaMap.cs" />
     <Compile Include="Mappings\SluzbenaProstorijaMap.cs" />
     <Compile Include="Mappings\StalnoZaposlenMap.cs" />
     <Compile Include="Mappings\TelefonMap.cs" />
